2010-05-03  Donal K. Fellows  <dkf@users.sf.net>

	* library/button.tcl (CheckInvoke, CheckEnter): [Patch 1530276 redux]:
	Apply a bit more care to ensure that things continue to work correctly
	even when there is no -selectcolor defined.

2010-04-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWin.h:		Unnecessary TCL_STORAGE_CLASS re-definition
	* win/tkWinInt.h:	Make various functions MODULE_SCOPE
	* win/tkWinButton.c:	TCHAR-related fixes, making al those
	* win/tkWinFont.c:	files compile fine when TCHAR != char.
	* win/tkWinScrlbr.c:
	* win/tkWinWindow.c:
	* win/tkWinWm.c:
	* win/tkWinX.c:
	* win/ttkWinMonitor.c:
	* win/ttkWinXPTheme.c:

2010-04-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPNG.c (ReadIDAT, DecodePNG): Move the check for overall
	termination of the compressed stream until after the final IDAT has
	been read, so that multi-segment images will work right. Reported by
	Andy Goth on the Wiki.

2010-04-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgGIF.c:  Formatting
	* generic/tkListbox.c: fix typo;
	* generic/tkTrig.c:    fix typo;
	* generic/tkInt.h:     fix typo; remove not existing tkDisplayList;
	* generic/*.h:         Useless re-definitions of TCL_STORAGE_CLASS

2010-04-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkPort.h:         Make sure that tkWinPort.h is always
	* generic/tkIntXlibDecls.h: included before tcl.h, otherwise the
	* win/tkWinPort.h:          fallback for TCHAR might go off before the
				    inclusion of <tchar.h>
	* win/tkWinDialog.c:        Define OPENFILENAME_SIZE_VERSION_400 if
				    needed.
	* compat/stdlib.h:          Include <tcl.h> only when not already
	* compat/unistd.h:	    done.
	* generic/tkInt.h:          tkPort.h already includes tk.h, which
				    includes tcl.h.
	* generic/tk3d.h:           Always use #include "tkInt.h", not
	* generic/tkColor.h:	    <tkInt.h>
	* xlib/xcolors.c:
	* xlib/xgc.c:

2010-04-19  Jan Nijtmans  <nijtmans@users.sf.net>
