@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.133 2010/02/17 19:21:16 nijtmans Exp $
+ * RCS: @(#) $Id: tk.h,v 1.134 2010/05/03 16:30:15 dgp Exp $
  */
 
 #ifndef _TK
@@ -55,7 +55,7 @@ extern "C" {
 #define TK_RELEASE_SERIAL	1
 
 #define TK_VERSION		"8.6"
-#define TK_PATCH_LEVEL		"8.6b1.1"
+#define TK_PATCH_LEVEL		"8.6b1.2"
 
 /*
  * A special definition used to allow this header file to be included from
